Update and rename index.js to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-// src/index.js
+// src/index.html
 const express = require('express');
 const bodyParser = require('body-parser');
 const cors = require('cors');
